sell token functionality

--- a/eleks/nft/plutus-web-app/src/styles/MyCollection.scss
+++ b/eleks/nft/plutus-web-app/src/styles/MyCollection.scss
@@ -19,4 +19,10 @@
     background-color: #cccccc;
     margin-top: 2em;
   }
+  
+  .no-text-message {
+    margin-top: 5em;
+    color: #6c757d;
+    font-weight: 300;
+  }
 }
