no tokens message

--- a/eleks/nft/plutus-web-app/src/styles/HomePage.scss
+++ b/eleks/nft/plutus-web-app/src/styles/HomePage.scss
@@ -4,4 +4,10 @@
     margin-left: 0.6em;
     color: #6c757d;
   }
+
+  .no-text-message {
+    margin-top: 5em;
+    color: #6c757d;
+    font-weight: 300;
+  }
 }
