--- a/AltLabs/dex-token-swap/web-ui/alt-swap/src/assets/css/style.css
+++ b/AltLabs/dex-token-swap/web-ui/alt-swap/src/assets/css/style.css
@@ -3,7 +3,7 @@ html {
     background-color: rgb(247, 248, 250);
 }
 body {
-    font-family: 'Chivo', sans-serif;
+    font-family: 'Rubik', sans-serif !important;
     min-height: 100vh;
     background-position: 0 -30vh;
     background-repeat: no-repeat;
@@ -135,20 +135,21 @@ body {
 .swap {
     position: relative;
     width: 100%;
-    background: rgb(255, 255, 255);
+    background: #14142B;
     box-shadow: rgba(0, 0, 0, 0.01) 0 0 1px, rgba(0, 0, 0, 0.04) 0 4px 8px, rgba(0, 0, 0, 0.04) 0 16px 24px, rgba(0, 0, 0, 0.01) 0 24px 32px;
-    border-radius: 30px;
+    border-radius: 24px;
     max-width: 420px;
+    padding: 0 2rem 0 2rem;
 }
 .swap__header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.25rem 1rem 0 1.5rem;
+    padding: 2.5rem 0 0 0;
     font-weight: 500;
     width: 100%;
-    color: rgb(0, 0, 0);
-    opacity: 0.7;
+    color: #FCFCFC;
+    /*opacity: 0.7;*/
 }
 .btn-settings {
     outline: none !important;
@@ -164,16 +165,17 @@ body {
 }
 .swap__body {
     position: relative;
-    padding: 1.25rem 1rem 1rem 1rem;
+    padding: 1.25rem 0 1rem 0;
 }
 .swap__body .swap__block {
     display: flex;
     flex-flow: column nowrap;
     position: relative;
-    z-index: 1;
-    border-radius: 20px;
-    border: 1px solid rgb(247, 248, 250);
-    background-color: rgb(255, 255, 255);
+    /*z-index: 1;*/
+    border-radius: 8px;
+    /*border: 1px solid rgb(247, 248, 250);*/
+    background-color: #262338;
+    box-shadow: none !important;
 }
 .swap__block-header {
     display: flex;
@@ -196,15 +198,16 @@ body {
     flex-flow: row nowrap;
     align-items: center;
     padding: 0.75rem 0.75rem 0.75rem 1rem;
+    position: relative;
 }
 .swap__block-body input {
-    color: rgb(0, 0, 0);
+    color: #fcfcfc;
     position: relative;
     font-weight: 500;
     outline: none;
     border: none;
     flex: 1 1 auto;
-    background-color: rgb(255, 255, 255);
+    background-color: transparent;
     font-size: 24px;
     white-space: nowrap;
     overflow: hidden;
@@ -218,13 +221,13 @@ body {
     margin: 0;
 }
 .swap__block-body ::-webkit-input-placeholder {
-    color: #C3C5CB !important;
+    color: #A0A3BD !important;
 }
 .swap__block-body :-ms-input-placeholder {
-    color: #C3C5CB !important;
+    color: #A0A3BD !important;
 }
 .swap__block-body ::placeholder {
-    color: #C3C5CB !important;
+    color: #A0A3BD !important;
 }
 .btn-max {
     height: 28px;
@@ -254,36 +257,37 @@ body {
     border: none;
 }
 .swap__footer {
-    padding: 1rem;
+    padding: 1rem 0 2rem 0;
 }
 .btn-swap {
     padding: 18px;
     width: 100%;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 1px;
     text-align: center;
-    border-radius: 20px;
-    background-color: rgb(0, 51, 173);
+    border-radius: 8px;
+    background: linear-gradient(95.08deg, #F80179 2.49%, #640EB3 97.19%);;
     color: rgb(255, 255, 255);
     cursor: auto;
     box-shadow: none;
-    border: 1px solid transparent;
+    border: none;
     outline: none !important;
     opacity: 1;
-    font-size: 20px;
 }
 .btn-swap:disabled {
-    background-color: rgb(237, 238, 242);
-    color: rgb(136, 141, 155);
+    background: #D9DBE9;
+    color: #A0A3BD;
 }
 .select-token {
     -webkit-box-align: center;
     display: flex;
     align-items: center;
-    font-weight: 500;
-    background-color: rgb(0, 51, 173);
+    font-weight: 600;
+    background-color: transparent;
     color: rgb(255, 255, 255);
     border-radius: 12px;
-    box-shadow: rgba(0, 0, 0, 0.08) 0 6px 10px;
+    /*box-shadow: rgba(0, 0, 0, 0.08) 0 6px 10px;*/
     cursor: pointer;
     user-select: none;
     border: none;
@@ -293,16 +297,20 @@ body {
     white-space: nowrap;
     outline: none !important;
 }
-.select-token:hover {
-    background-color: rgb(0, 43, 148);
+.select-token span {
+    transition: all 200ms;
+    background-image: -webkit-gradient( linear, left top, right bottom, color-stop(0, #F80179), color-stop(1, #BB0691) );
+    background-image: gradient( linear, left top, right bottom, color-stop(0, #F80179), color-stop(1, #BB0691) );
+    color:transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
 }
 .select-token.selected {
     border-radius: 24px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    /*background-color: rgb(255, 255, 255);*/
 }
 .select-token.selected:hover {
-    background-color: rgb(247, 248, 250);
+    background-color: #14142B;
 }
 .select-token.selected img {
     margin-right: 12px;
@@ -313,6 +321,7 @@ body {
 }
 .select-token i {
     margin-left: 7px;
+    color: #BB0691;
 }
 .modal-backdrop {
     z-index: 2;
@@ -488,3 +497,68 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background: #ccc;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+.select-stencil-token {
+    display: none;
+    position: absolute;
+    list-style: none;
+    top: 51px;
+    right: 16px;
+    border-radius: 8px;
+    background: #14142B;
+    z-index: 22;
+    padding: 10px 0;
+    width: 200px;
+    box-shadow: 0 8px 24px rgba(78, 75, 102, .2);
+}
+ul.select-stencil-token.active {
+    display: block;
+}
+.select-stencil-token li {
+    display: flex;
+    align-items: center;
+    padding: 8px 20px;
+    cursor: pointer;
+}
+.select-stencil-token li:hover {
+    background-color: #262338;
+}
+.select-stencil-token li.not-clickable {
+    pointer-events: none;
+    opacity: 0.2;
+}
+.select-stencil-token li img {
+    width: 24px;
+    height: 24px;
+    box-shadow: rgba(0, 0, 0, .08) 0 6px 10px;
+    border-radius: 24px;
+    margin-right: 20px;
+}
+.select-stencil-token .symbol {
+    font-size: 16px;
+    line-height: 16px;
+    margin: 0;
+    font-weight: 500;
+    display: block;
+    color: #f7f7f7;
+}
+.select-stencil-token .name {
+    margin: 0;
+    font-weight: 300;
+    font-size: 12px;
+    display: block;
+    color: #f7f7f7;
+}
+
