Remove sidebar, update custom sidebar to be scrollable

--- a/dquadrant/nft/client/src/assets/main.css
+++ b/dquadrant/nft/client/src/assets/main.css
@@ -26,6 +26,12 @@
     position: relative;
 }
 
+.overflow-y {
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+}
+
 #sidebar .h6 {
     color: #fff;
 }
