--- a/dquadrant/nft/client/src/assets/main.css
+++ b/dquadrant/nft/client/src/assets/main.css
@@ -18,7 +18,7 @@
 #sidebar {
     min-width: 270px;
     max-width: 270px;
-    background: #3445b4;
+    background: #007bff;
     color: #fff;
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
@@ -52,7 +52,7 @@
 
 #sidebar h1 .logo span {
     font-size: 14px;
-    color: #44bef1;
+    color: #cccccc;
     display: block;
 }
 
@@ -80,7 +80,7 @@
 }
 
 #sidebar ul li a span {
-    color: #44bef1;
+    color: #cccccc;
 }
 
 #sidebar ul li a:hover {
@@ -149,7 +149,7 @@
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
-    background: #3445b4;
+    background: #007bff;
     border-radius: 10px;
 }
 
@@ -158,7 +158,7 @@
     border-color: transparent !important;
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 990px) {
     #sidebarCollapse span {
         display: none;
     }
@@ -168,8 +168,9 @@
     width: 100%;
     padding: 0;
     margin: 0;
-    min-height: 100vh;
+    height: 100vh;
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
+    overflow-y: scroll;
 }
