--- a/eleks/oracle/games-web-app/src/styles/Bets.scss
+++ b/eleks/oracle/games-web-app/src/styles/Bets.scss
@@ -1,3 +1,19 @@
 .Bets {
-    margin-top: 2em;
+  margin-top: 1em;
+  margin-bottom: 3em;
+
+  .bet {
+    display: flex;
+    padding: 10px 0;
+    border-bottom: 1px solid grey;
+  }
+
+  .hash {
+    word-break: break-all;
+    margin-right: 20px;
+  }
+
+  .amount {
+      font-weight: bold;
+  }
 }
