--- a/eleks/oracle/games-web-app/src/styles/Game.scss
+++ b/eleks/oracle/games-web-app/src/styles/Game.scss
@@ -2,11 +2,14 @@
   color: #4a4a4a;
   display: flex;
   justify-content: space-around;
-  padding: 0 10em;
+  padding: 0 5em;
 
   .team {
-    width: 30%;
+    width: 35%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .img {
@@ -14,9 +17,18 @@
   }
 
   .img-border {
+    width: 80%;
     border: 4px dotted #878787;
     border-radius: 50%;
     padding: 2em;
+
+    &.winner {
+      border-color: #23b06e;
+    }
+
+    &.defeated {
+      border-color: rgba(220, 52, 68, 1);
+    }
   }
 
   .game-details {
@@ -33,18 +45,23 @@
     margin-bottom: 2em;
 
     &.live {
-      border: 1px solid rgba(255, 192, 7, 0.7);
-      color: rgba(255, 192, 7, 0.7);
+      border: 1px solid rgba(255, 192, 7, 1);
+      color: rgba(255, 192, 7, 1);
     }
 
     &.closed {
-      border: 1px solid rgba(220, 52, 68, 0.7);
-      color: rgba(220, 52, 68, 0.7);
+      border: 1px solid rgba(220, 52, 68, 1);
+      color: rgba(220, 52, 68, 1);
     }
 
     &.open {
-      border: 1px solid rgba(25, 135, 83, 0.7);
-      color: rgba(25, 135, 83, 0.7);
+      border: 1px solid rgba(25, 135, 83, 1);
+      color: rgba(25, 135, 83, 1);
+    }
+
+    &.canceled {
+      border: 1px solid rgba(128, 128, 128, 1);
+      color: rgba(128, 128, 128, 1);
     }
   }
 
