--- a/eleks/oracle/games-web-app/src/styles/Bets.scss
+++ b/eleks/oracle/games-web-app/src/styles/Bets.scss
@@ -6,6 +6,10 @@
     display: flex;
     padding: 10px 0;
     border-bottom: 1px solid grey;
+
+    &.myBet {
+      border-bottom: 2px solid rgba(25, 135, 83, 1);
+    }
   }
 
   .hash {
@@ -14,6 +18,6 @@
   }
 
   .amount {
-      font-weight: bold;
+    font-weight: bold;
   }
 }
