--- a/eleks/oracle/games-web-app/src/styles/Header.scss
+++ b/eleks/oracle/games-web-app/src/styles/Header.scss
@@ -7,6 +7,10 @@
   border-bottom: 1px solid #dedede;
   background-color: #f5f5f5;
 
+  .link {
+    text-decoration: none;
+  }
+
   .title {
     color: #5e666d;
     margin-bottom: 0;
