--- a/eleks/oracle/games-web-app/src/styles/Bets.scss
+++ b/eleks/oracle/games-web-app/src/styles/Bets.scss
@@ -10,14 +10,43 @@
     &.myBet {
       border-bottom: 2px solid rgba(25, 135, 83, 1);
     }
+
+    &.myBet:hover {
+      .cancel {
+        opacity: 1;
+      }
+    }
   }
 
   .hash {
     word-break: break-all;
-    margin-right: 20px;
+    margin-right: 10px;
   }
 
   .amount {
     font-weight: bold;
+    margin-right: 10px;
+  }
+
+  .cancel {
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+  }
+
+  .crossPlaceholder {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.CancelBet {
+  .body {
+    text-align: center;
+  }
+
+  .footer {
+    justify-content: space-between;
   }
 }
